[tool.poetry]
name = "log-enricher"
version = "2.0.0"
description = "Library to enrich structured logs"
authors = ["Arni Inaba Kjartansson <arni@grid.is>"]
license = "MIT"
repository = "https://github.com/arni-inaba/log-enricher"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
python-json-logger = "^0.1.11"
strenum = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
freezegun = "^0.3.12"
mypy = {version = "=0.720.0", allow-prereleases = true}
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
pre-commit = "^1.20"
[tool.black]
line-length = 115
target-version = ['py37']
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
